--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 markdown: rdiscount 
 permalink: /:year/:month/:day/:title 
-title: Tao
-url: http://ztpala.com
+title: Liang
+url: http://liangshilei.com
 subscribe: http://ztpala.com/feed.xml
 exclude: [ README.md, newpost.rb ]
-domain: ztpala.com
-author: Tao Zhang
-email: ztpala+blog@gmail.com
+domain: liangshilei.com
+author: Liang Shilei
+email: xmuliang@gmail.com
 auto: true
-twitterID: ztpala
-googleAnalyticsID: UA-5531632-1
-disqusShortname: ztpala
+disqusShortname: Liang
